--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
-    <string name="app_name">Менаџер фајлова</string>
-    <string name="action_settings">Подешавања</string>
-    <string name="title_activity_settings">Подешавања</string>
-    <string name="podesavanjeIPadresa">Унесите адресу сервера</string>
-    <string name="podesavanjePort">Унесите порт</string>
-    <string name="dugmeSacuvaj">Сачувај</string>
-    <string name="ONOFF"></string>
+    <string name="app_name">Perica</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
