--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Perica</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
-
+    <string name="podesavanjePort">Unesite Port</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
